--- a/volgrid6d/Makefile.am
+++ b/volgrid6d/Makefile.am
@@ -1,6 +1,9 @@
 lib_LTLIBRARIES = libsim_volgrid6d.la
 libsim_volgrid6d_la_SOURCES = grid_dim_class.F90 grid_rect_class.F90
 
+include_HEADERS =
+AM_CPPFLAGS =
+
 if GDAL
 libsim_volgrid6d_la_SOURCES += gdal.f90
 endif
@@ -8,6 +11,8 @@ endif
 libsim_volgrid6d_la_SOURCES += grid_id_class.F90 grid_class.F90 \
  grid_transform_class.F90 volgrid6d_var_class.F90 gridinfo_class.F90 \
  volgrid6d_class.F90
+
+
 
 # Opzioni Fortran (-I... sono da considerarsi opzioni fortran
 # e non del preprocessore perche' servono per USE e non per #include)
@@ -19,9 +24,22 @@ libsim_volgrid6d_la_LDFLAGS =
 libsim_volgrid6d_la_LIBADD = ../log4fortran/liblog4fortran.la \
  ../base/libsim_base.la ../vol7d/libsim_vol7d.la
 
+
+
+if VAPOR
+libsim_volgrid6d_la_SOURCES += vdf4f_c.cpp vdf4f.F03 volgrid6d_vapor_class.F90
+AM_CPPFLAGS += $(VAPOR_CPPFLAGS)
+libsim_volgrid6d_la_LDFLAGS += $(VAPOR_LDFLAGS)
+libsim_volgrid6d_la_LIBADD += $(VAPOR_LIBS)
+include_HEADERS += vdf4f_c.h
+endif
+
+
 # c'e` una maniera migliore?
-tmpvar = $(libsim_volgrid6d_la_SOURCES:.f90=.mod)
-nodist_include_HEADERS = $(tmpvar:.F90=.mod)
+tmpvar90 = $(libsim_volgrid6d_la_SOURCES:.f90=.mod)
+tmpvar = $(libsim_volgrid6d_la_SOURCES:vdf4f_c.cpp=)
+tmpvar03 = $(tmpvar:.f03=.mod)
+nodist_include_HEADERS = $(tmpvar90:.F90=.mod) $(tmpvar03:.F03=.mod)
 
 if GRIBAPI
 libsim_volgrid6d_la_LIBADD += $(GRIBAPI_LIBS)
