porting vapor interface to amd64
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@905 500a5620-302c-0410-bb8c-d54761bbe776

--- a/configure.ac
+++ b/configure.ac
@@ -11,6 +11,7 @@ AC_SUBST(LIBSIM_VERSION_INFO)
 AC_LANG([C])
 AC_C_BIGENDIAN
 AC_CHECK_SIZEOF(void *)
+AC_CHECK_SIZEOF(size_t)
 
 if test "x$ac_cv_sizeof_void_p" = "x1"; then
   sizeof_ptr_c="int_b"
