pre alpha derivate variables management
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@918 500a5620-302c-0410-bb8c-d54761bbe776

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -243,7 +243,7 @@ SUBGROUPING            = YES
 # Private class members and static file members will be hidden unless 
 # the EXTRACT_PRIVATE and EXTRACT_STATIC tags are set to YES
 
-EXTRACT_ALL            = NO
+EXTRACT_ALL            = YES
 
 # If the EXTRACT_PRIVATE tag is set to YES all private members of a class 
 # will be included in the documentation.
@@ -1013,7 +1013,7 @@ SEARCH_INCLUDES        = YES
 # contain include files that are not input files but should be processed by 
 # the preprocessor.
 
-INCLUDE_PATH           = @top_srcdir@
+INCLUDE_PATH           = @top_srcdir@/base
 
 # You can use the INCLUDE_FILE_PATTERNS tag to specify one or more wildcard 
 # patterns (like *.h and *.hpp) to filter out the header-files in the 
