--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -116,10 +116,12 @@ v7d_transform_SOURCES = vol7d_csv.F90 v7d_transform.F90
 v7d_transform_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../qc/libsim_qc.la ../volgrid6d/libsim_volgrid6d.la ../log4fortran/liblog4fortran.la
 
 if SHP
+if GRIB
 noinst_PROGRAMS += esempio_geo_coordvect
 
 esempio_geo_coordvect_SOURCES = esempio_geo_coordvect.f90
 esempio_geo_coordvect_LDADD =  ../base/libsim_base.la
+endif
 endif
 
 if GRIBAPI
