porting to ifort (not all is fortran iso standard ?!)
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@948 500a5620-302c-0410-bb8c-d54761bbe776

--- a/grib/Makefile.am
+++ b/grib/Makefile.am
@@ -1,7 +1,7 @@
 if GRIB
 lib_LTLIBRARIES = libsim_grib.la
 libsim_grib_la_SOURCES =
-AM_FCFLAGS = -I../base
+AM_FCFLAGS = -I../base -I../log4fortran
 libsim_grib_la_LIBADD = ../base/libsim_base.la 
 
 if VERSIONINFO
