new v7d_qccli promoted from example to installed tool
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@953 500a5620-302c-0410-bb8c-d54761bbe776

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -36,7 +36,7 @@ endif
 
 
 if DBALLE
-noinst_PROGRAMS += esempio_v7ddballe esempio_v7ddballe_multi esempio_v7ddballe_import_export esempio_v7ddballe_export esempio_qccli esempio_qc_convert example_v7ddballe_v7d2dba esempio_v7ddballe_move_and_collapse
+noinst_PROGRAMS += esempio_v7ddballe esempio_v7ddballe_multi esempio_v7ddballe_import_export esempio_v7ddballe_export esempio_qc_convert example_v7ddballe_v7d2dba esempio_v7ddballe_move_and_collapse
 
 esempio_v7ddballe_SOURCES = esempio_v7ddballe.f90
 esempio_v7ddballe_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
@@ -85,8 +85,10 @@ v7d_plot_sound_LDADD = ../graphics/libsim_graphics.la ../base/libsim_base.la ../
 
 endif
 
-esempio_qccli_SOURCES = esempio_qccli.f90
-esempio_qccli_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la ../qc/libsim_qc.la
+bin_PROGRAMS += v7d_qccli
+
+v7d_qccli_SOURCES = v7d_qccli.f90
+v7d_qccli_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la ../qc/libsim_qc.la
 
 esempio_qc_convert_SOURCES = esempio_qc_convert.f90
 esempio_qc_convert_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la ../qc/libsim_qc.la
