integrated alchimia in the build system
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@957 500a5620-302c-0410-bb8c-d54761bbe776

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,5 @@
 EXTRA_DIST = libsim.spec portability/conv_cpp.sh portability/README_aix
 
 # Execute make in subdirs
-SUBDIRS = log4fortran base grib vol7d volgrid6d data qc termolib graphics examples doc 
+SUBDIRS = log4fortran base grib vol7d volgrid6d data qc termolib graphics alchimia examples doc 
+
