--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 EXTRA_DIST = libsim.spec portability/conv_cpp.sh portability/README_aix
 
 # Execute make in subdirs
-SUBDIRS = log4fortran base grib vol7d volgrid6d data qc termolib graphics alchimia examples doc 
+SUBDIRS = log4fortran base alchimia grib vol7d volgrid6d data qc termolib graphics examples doc 
 
