added NormalizedDensityIndex with example now -Wall is activated with debug
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@988 500a5620-302c-0410-bb8c-d54761bbe776

--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -52,8 +52,8 @@ geo_grid_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) char_utilitie
 geo_grid_class.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT) char_utilities.$(OBJEXT) err_handling.$(OBJEXT) geo_coord_with_utm_class.$(OBJEXT)
 optionparser_class.$(OBJEXT): err_handling.$(OBJEXT) kinds.$(OBJEXT) char_utilities.$(OBJEXT)
 optionparser_class.lo: err_handling.$(OBJEXT) kinds.$(OBJEXT) char_utilities.$(OBJEXT)
-simple_stat.$(OBJEXT): missing_values.$(OBJEXT)
-simple_stat.lo: missing_values.$(OBJEXT)
+simple_stat.$(OBJEXT): missing_values.$(OBJEXT) array_utilities.$(OBJEXT)
+simple_stat.lo: missing_values.$(OBJEXT) array_utilities.$(OBJEXT)
 geo_transforms.$(OBJEXT): phys_const.$(OBJEXT)
 geo_transforms.lo: phys_const.$(OBJEXT)
 geo_proj_class.$(OBJEXT): phys_const.$(OBJEXT) missing_values.$(OBJEXT) optional_values.$(OBJEXT)
