--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = libsim.spec portability/conv_cpp.sh portability/README_aix
+EXTRA_DIST = libsim.spec portability/conv_cpp.sh portability/README_aix AUTHORS
 
 # Execute make in subdirs
 SUBDIRS = log4fortran base alchimia grib vol7d volgrid6d data qc termolib graphics examples doc 
