--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -3,7 +3,8 @@ libsim_base_la_SOURCES = io_units.F90 kinds.F90 phys_const.f90 missing_values.f9
  char_utilities.f90 err_handling.f90 datetime_class.F90 array_utilities.F90 optional_values.f90 file_utilities.F90 \
  geo_coord_class.F90 \
  optionparser_class.F90 \
- simple_stat.f90 geo_proj_class.F90
+ simple_stat.f90 geo_proj_class.F90 \
+ space_utilities.F90
 
 # Opzioni Fortran (-I... sono da considerarsi opzioni fortran
 # e non del preprocessore perche' servono per USE e non per #include)
