--- a/qc/Makefile.am
+++ b/qc/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES = libsim_qc.la
-libsim_qc_la_SOURCES = modqc.f90 modqccli.F90 modqcspa.F90
+libsim_qc_la_SOURCES = modqc.F90 modqccli.F90 modqcspa.F90
 
 AM_FCFLAGS = -I../base -I../vol7d -I../log4fortran
 libsim_qc_la_LIBADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
