Code restructuring: examples separated from applications, stat_proc_engine.f90 extracted from vol7d_class_compute.F90.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1027 500a5620-302c-0410-bb8c-d54761bbe776

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 EXTRA_DIST = libsim.spec portability/conv_cpp.sh portability/README_aix AUTHORS
 
 # Execute make in subdirs
-SUBDIRS = log4fortran base alchimia grib vol7d volgrid6d data qc termolib graphics examples doc 
+SUBDIRS = log4fortran base alchimia grib vol7d volgrid6d data qc termolib graphics bin examples doc
 
