--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,6 +1,7 @@
+if EXAMPLES
+
 AM_FCFLAGS = -I../base -I../grib -I../volgrid6d -I../vol7d -I../qc -I../termolib -I../log4fortran  -I../graphics -I../alchimia
 EXTRA_DIST = log4crc
-bin_PROGRAMS =
 
 noinst_PROGRAMS = esempio_file_utilities esempio_v7d esempio_v7d_compute esempio_termolib log4fortran example_optionparser example_char_utilities example_simple_stat example_space_utilities
 
@@ -43,15 +44,6 @@ noinst_PROGRAMS += esempio_regrib
 
 esempio_regrib_SOURCES = esempio_regrib.f90
 esempio_regrib_LDADD = ../base/libsim_base.la ../grib/libsim_grib.la
-endif
-
-# v7d_plot_sound can work without dballe
-if NCARG
-bin_PROGRAMS += v7d_plot_sound
-
-v7d_plot_sound_SOURCES = v7d_plot_sound.F90
-v7d_plot_sound_LDADD = ../graphics/libsim_graphics.la  ../vol7d/libsim_vol7d.la  ../log4fortran/liblog4fortran.la ../termolib/libsim_termolib.la ../base/libsim_base.la
-
 endif
 
 if DBALLE
@@ -98,18 +90,6 @@ example_ncarg_sounding_LDADD = ../graphics/libsim_graphics.la ../base/libsim_bas
 
 endif
 
-bin_PROGRAMS += v7d_qccli v7d_qcspa
-
-v7d_qccli_SOURCES = v7d_qccli.f90 
-v7d_qccli_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la ../qc/libsim_qc.la
-
-v7d_qcspa_SOURCES = v7d_qcspa.F90 
-v7d_qcspa_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la ../qc/libsim_qc.la
-
-if NCARG
-v7d_qcspa_LDADD += ../graphics/libsim_graphics.la ../termolib/libsim_termolib.la
-endif
-
 esempio_qc_convert_SOURCES = esempio_qc_convert.f90
 esempio_qc_convert_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la ../qc/libsim_qc.la
 
@@ -124,22 +104,8 @@ esempio_v7doracle_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log
 
 esempio_v7doracle_multi_SOURCES = esempio_v7doracle_multi.f90
 esempio_v7doracle_multi_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
-
-bin_PROGRAMS += v7d_pollini
-
-v7d_pollini_SOURCES = v7d_pollini.f90
-v7d_pollini_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
-
 endif
 
-bin_PROGRAMS += v7d_transform
-
-v7d_transform_SOURCES = vol7d_csv.F90 v7d_transform.F90
-v7d_transform_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../qc/libsim_qc.la ../volgrid6d/libsim_volgrid6d.la ../log4fortran/liblog4fortran.la
-
-if ALCHIMIA
-v7d_transform_LDADD += ../alchimia/libsim_alchimia.la ../termolib/libsim_termolib.la  
-endif
 
 if SHP
 if GRIB
@@ -184,30 +150,6 @@ example_vg6d_8_SOURCES = example_vg6d_8.f90
 example_vg6d_8_LDADD = ../volgrid6d/libsim_volgrid6d.la ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
 
 endif
-
-endif
-
-bin_PROGRAMS += vg6d_getpoint vg6d_transform
-
-if GRIBAPI
-vg6d_getpoint_SOURCES = grib_api_csv.F90 vg6d_getpoint.F90
-else
-vg6d_getpoint_SOURCES = vg6d_getpoint.F90
-endif
-vg6d_getpoint_LDADD = ../volgrid6d/libsim_volgrid6d.la  ../vol7d/libsim_vol7d.la ../base/libsim_base.la ../log4fortran/liblog4fortran.la
-
-vg6d_transform_SOURCES = vg6d_transform.F90
-
-vg6d_transform_LDADD = ../volgrid6d/libsim_volgrid6d.la ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
-
-if ALCHIMIA
-vg6d_transform_LDADD += ../alchimia/libsim_alchimia.la ../termolib/libsim_termolib.la  
-endif
-
-if GRIBAPI
-bin_PROGRAMS += vg6d_subarea
-vg6d_subarea_SOURCES = vg6d_subarea.F90
-vg6d_subarea_LDADD = ../volgrid6d/libsim_volgrid6d.la ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
 endif
 
 if ALCHIMIA
@@ -219,9 +161,7 @@ example_alchimia_LDADD = ../alchimia/libsim_alchimia.la  ../log4fortran/liblog4f
 example_alchimiavg6d_SOURCES = example_alchimiavg6d.f03
 example_alchimiavg6d_LDADD = ../alchimia/libsim_alchimia.la  ../volgrid6d/libsim_volgrid6d.la ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../termolib/libsim_termolib.la ../log4fortran/liblog4fortran.la
 
-
 if DBALLE
-
 noinst_PROGRAMS += example_alchimiav7d
 
 example_alchimiav7d_SOURCES = example_alchimiav7d.f03
@@ -230,24 +170,7 @@ example_alchimiav7d_LDADD = ../alchimia/libsim_alchimia.la  ../vol7d/libsim_vol7
 endif
 endif
 
-
-if HELP2MAN
-
-man_MANS = v7d_transform.1 vg6d_getpoint.1 vg6d_transform.1
-
-if GRIBAPI
-man_MANS += vg6d_subarea.1
-endif
-if DBALLE
-if NCARG
-man_MANS += v7d_plot_sound.1
-endif
-endif
-
-
-%.1: %
-	help2man --name=$< --section=1 --no-info --output=$@ ./$<
-
+# EXAMPLES
 endif
 
 mostlyclean-compile:
