--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -2,7 +2,7 @@ lib_LTLIBRARIES = libsim_vol7d.la
 libsim_vol7d_la_SOURCES = vol7d_ana_class.F90 vol7d_level_class.F90 \
  vol7d_network_class.F90 vol7d_timerange_class.F90 \
  vol7d_var_class.F90 vol7d_varvect_class.f90 \
- vol7d_class.F90 vol7d_class_compute.F90
+ vol7d_class.F90 stat_proc_engine.f90 vol7d_class_compute.F90
 
 # Opzioni Fortran (-I... sono da considerarsi opzioni fortran
 # e non del preprocessore perche' servono per USE e non per #include)
@@ -71,7 +71,9 @@ vol7d_class.lo: vol7d_ana_class.$(OBJEXT) \
  vol7d_timerange_class.$(OBJEXT) vol7d_level_class.$(OBJEXT) \
  vol7d_network_class.$(OBJEXT) vol7d_varvect_class.$(OBJEXT) \
  vol7d_class_type_templ.F90 vol7d_class_desc_templ.F90 vol7d_class_diff.F90 vol7d_class_diff_only.F90
-vol7d_class_compute.$(OBJEXT): vol7d_class.$(OBJEXT)
+stat_proc_engine.$(OBJEXT): vol7d_class.$(OBJEXT)
+stat_proc_engine.lo: vol7d_class.$(OBJEXT) stat_proc_engine.$(OBJEXT)
+vol7d_class_compute.$(OBJEXT): vol7d_class.$(OBJEXT) stat_proc_engine.$(OBJEXT)
 vol7d_class_compute.lo: vol7d_class.$(OBJEXT)
 if ORSIM
 vol7d_oraclesim_class.$(OBJEXT): vol7d_class.$(OBJEXT) vol7d_oraclesim_class_vartable.F90
