--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libsim_base.la
 libsim_base_la_SOURCES = io_units.F90 kinds.F90 phys_const.f90 missing_values.f90 \
- char_utilities.f90 err_handling.f90 datetime_class.F90 array_utilities.F90 optional_values.f90 file_utilities.F90 \
+ char_utilities.f90 err_handling.f90 optional_values.f90 datetime_class.F90 array_utilities.F90 file_utilities.F90 \
  geo_coord_class.F90 \
  optionparser_class.F90 \
  simple_stat.f90 geo_proj_class.F90 \
@@ -39,7 +39,7 @@ optional_values.lo: missing_values.$(OBJEXT)
 
 err_handling.$(OBJEXT): io_units.$(OBJEXT)
 err_handling.lo: io_units.$(OBJEXT)
-datetime_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT) arrayof_pre.F90 arrayof_post.F90  array_utilities_inc.F90
+datetime_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT)  optional_values.$(OBJEXT) arrayof_pre.F90 arrayof_post.F90  array_utilities_inc.F90
 datetime_class.lo: err_handling.$(OBJEXT) missing_values.$(OBJEXT) arrayof_pre.F90 arrayof_post.F90  array_utilities_inc.F90
 file_utilities.$(OBJEXT): kinds.$(OBJEXT) char_utilities.$(OBJEXT) missing_values.$(OBJEXT) err_handling.$(OBJEXT) optional_values.$(OBJEXT)
 file_utilities.lo: kinds.$(OBJEXT) char_utilities.$(OBJEXT) missing_values.$(OBJEXT) err_handling.$(OBJEXT) optional_values.$(OBJEXT)
