--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -39,8 +39,8 @@ optional_values.lo: missing_values.$(OBJEXT)
 
 err_handling.$(OBJEXT): io_units.$(OBJEXT)
 err_handling.lo: io_units.$(OBJEXT)
-datetime_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT)  optional_values.$(OBJEXT) arrayof_pre.F90 arrayof_post.F90  array_utilities_inc.F90
-datetime_class.lo: err_handling.$(OBJEXT) missing_values.$(OBJEXT) arrayof_pre.F90 arrayof_post.F90  array_utilities_inc.F90
+datetime_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT) optional_values.$(OBJEXT) char_utilities.$(OBJEXT) arrayof_pre.F90 arrayof_post.F90  array_utilities_inc.F90
+datetime_class.lo: err_handling.$(OBJEXT) missing_values.$(OBJEXT) optional_values.$(OBJEXT) char_utilities.$(OBJEXT) arrayof_pre.F90 arrayof_post.F90  array_utilities_inc.F90
 file_utilities.$(OBJEXT): kinds.$(OBJEXT) char_utilities.$(OBJEXT) missing_values.$(OBJEXT) err_handling.$(OBJEXT) optional_values.$(OBJEXT)
 file_utilities.lo: kinds.$(OBJEXT) char_utilities.$(OBJEXT) missing_values.$(OBJEXT) err_handling.$(OBJEXT) optional_values.$(OBJEXT)
 array_utilities.$(OBJEXT): datetime_class.$(OBJEXT)
