Revised metamorphosis:poly transformation, using multiple polygons.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1097 500a5620-302c-0410-bb8c-d54761bbe776

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -4,7 +4,7 @@ if ORSIM
 
 dist_bin_SCRIPTS = libsim_gen_ana_ora.sh
 
-dist_pkgdata_DATA += polipciv4.dat estra_temp.dat in.grb
+dist_pkgdata_DATA += macroaree_er.shp macroaree_er.shx estra_temp.dat in.grb
 
 endif
 
