Fixes for working with gdal datasets.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1109 500a5620-302c-0410-bb8c-d54761bbe776

--- a/configure.ac
+++ b/configure.ac
@@ -222,7 +222,7 @@ if test "x$enableval" = "xyes"; then
    [AC_MSG_RESULT([gdal C bindings found!])]
    GDAL_LIBS="-lfortrangis -lgdal"
    AC_SUBST(GDAL_LIBS)
-   AC_DEFINE(HAVE_GDAL, 1, [Enable gdal]),
+   AC_DEFINE(HAVE_LIBGDAL, 1, [Enable gdal]),
    [AC_MSG_ERROR([gdal C bindings not found!])]
   )
 else
