lost to comment a print
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1118 500a5620-302c-0410-bb8c-d54761bbe776

--- a/qc/Makefile.am
+++ b/qc/Makefile.am
@@ -8,6 +8,8 @@ if VERSIONINFO
 libsim_qc_la_LDFLAGS = -version-info @LIBSIM_VERSION_INFO@
 endif
 
+noinst_HEADERS = modqc_peeled_include.F90  modqc_peeling_include.F90  modqc_peel_util_include.F90
+
 # c'e` una maniera migliore?
 tmpvar = $(libsim_qc_la_SOURCES:.f90=.mod)
 nodist_include_HEADERS = $(tmpvar:.F90=.mod)
