--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -4,8 +4,6 @@ if ORSIM
 
 dist_bin_SCRIPTS = libsim_gen_ana_ora.sh
 
-dist_pkgdata_DATA += macroaree_er.shp macroaree_er.shx estra_temp.dat in.grb
-
 endif
 
 if GRIBAPI
@@ -13,3 +11,7 @@ dist_pkgdata_DATA += vargrib2bufr.csv
 endif
 
 EXTRA_DIST = libsim_gen_var_ora.sh libsim_gen_varconv_ora.py
+
+# for tests/examples
+EXTRA_DIST += t_p.grb estra_temp.dat
+
