New serialization class for vol7d, it replaces vol7d_csv, at the moment only conditionally, when a f2003 compiler is available.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1167 500a5620-302c-0410-bb8c-d54761bbe776

--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,7 @@ AC_ARG_ENABLE(f2003-features, AC_HELP_STRING([--enable-f2003-features],
 if test "x$enableval" = "xyes"; then
 AC_DEFINE(F2003_FEATURES, 1, [Enable some F2003 features])
 fi
+AM_CONDITIONAL(F2003_FEATURES, test "x$enableval" = "xyes")
 
 AC_PROG_CXX()
 
