--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -33,7 +33,11 @@ endif
 
 bin_PROGRAMS += v7d_transform
 
+if F2003_FEATURES
+v7d_transform_SOURCES = v7d_transform.F90
+else
 v7d_transform_SOURCES = vol7d_csv.F90 v7d_transform.F90
+endif
 v7d_transform_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../qc/libsim_qc.la ../volgrid6d/libsim_volgrid6d.la ../log4fortran/liblog4fortran.la
 
 if ALCHIMIA
