--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -36,7 +36,8 @@ libsim_vol7d_la_LIBADD += $(NETCDF_LIBS)
 endif
 
 if F2003_FEATURES
-libsim_vol7d_la_SOURCES += vol7d_serialize_class.F03 vol7d_serialize_csv_class.F03
+libsim_vol7d_la_SOURCES += vol7d_serialize_class.F03 vol7d_serialize_csv_class.F03 \
+ vol7d_serialize_geojson_class.F03
 endif
 
 if VERSIONINFO
@@ -102,6 +103,8 @@ endif
 if F2003_FEATURES
 vol7d_serialize_csv_class.$(OBJEXT): vol7d_serialize_class.$(OBJEXT)
 vol7d_serialize_csv_class.lo: vol7d_serialize_class.$(OBJEXT)
+vol7d_serialize_geojson_class.$(OBJEXT): vol7d_serialize_class.$(OBJEXT)
+vol7d_serialize_geojson_class.lo: vol7d_serialize_class.$(OBJEXT)
 endif
 
 mostlyclean-compile:
