Revision of to_char and t2c functions, fix for backslash.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1173 500a5620-302c-0410-bb8c-d54761bbe776

--- a/configure.ac
+++ b/configure.ac
@@ -57,12 +57,16 @@ AC_DEFINE(DEBUG, 1, [Enable debugging mode])
 fi
 
 dnl options to be added compulsorily for particular compilers
+dnl -fbackslash required in char_utilities.f90 for '\\'
 case "$FC" in
   *xlf*)
 # -qextname: external names with underscore
 # -WF,-C!: remove C comments from preprocessed (Fortran) code
   FCFLAGS="$FCFLAGS -qextname -WF,-C!"
 #  FCFLAGS="$FCFLAGS -qextname -F "'$(abs_top_builddir)/portability/xlf.cfg'
+;;
+  *gfortran*)
+  FCFLAGS="$FCFLAGS -fbackslash"
 ;;
 esac
 
