Test script added to tarball distribution.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1195 500a5620-302c-0410-bb8c-d54761bbe776

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -81,7 +81,7 @@ endif
 # improve
 if GRIBAPI
 if SHAPELIB
-check_SCRIPTS = getpoint_transform_test.sh
+dist_check_SCRIPTS = getpoint_transform_test.sh
 TESTS = $(check_SCRIPTS)
 endif
 endif
