Implementation of linear regression and general cleanup of the module.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1211 500a5620-302c-0410-bb8c-d54761bbe776

--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -49,8 +49,8 @@ georef_coord_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT) op
 georef_coord_class.lo: err_handling.$(OBJEXT) missing_values.$(OBJEXT) optional_values.$(OBJEXT) geo_proj_class.$(OBJEXT)
 optionparser_class.$(OBJEXT): err_handling.$(OBJEXT) kinds.$(OBJEXT) char_utilities.$(OBJEXT)
 optionparser_class.lo: err_handling.$(OBJEXT) kinds.$(OBJEXT) char_utilities.$(OBJEXT)
-simple_stat.$(OBJEXT): missing_values.$(OBJEXT) array_utilities.$(OBJEXT)
-simple_stat.lo: missing_values.$(OBJEXT) array_utilities.$(OBJEXT)
+simple_stat.$(OBJEXT): missing_values.$(OBJEXT) optional_values.$(OBJEXT) array_utilities.$(OBJEXT)
+simple_stat.lo: missing_values.$(OBJEXT) optional_values.$(OBJEXT) array_utilities.$(OBJEXT)
 geo_transforms.$(OBJEXT): phys_const.$(OBJEXT)
 geo_transforms.lo: phys_const.$(OBJEXT)
 
