--output-format=netcf added to v7d_transform
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1219 500a5620-302c-0410-bb8c-d54761bbe776

--- a/configure.ac
+++ b/configure.ac
@@ -330,10 +330,12 @@ AC_ARG_ENABLE(netcdf, AC_HELP_STRING([--disable-netcdf],
   [disable netcdf support]),,[enableval=yes])dnl default enable
 if test "x$enableval" = "xyes"; then
   AC_CHECK_LIB([netcdff], [nf_inq_libvers],
-    AC_MSG_RESULT([netcdf code included])
     NETCDF_LIBS="-lnetcdff -lnetcdf"
-    AC_SUBST(NETCDF_LIBS),
-    AC_MSG_ERROR([netcdf library not found]),[-lnetcdf])
+    AC_SUBST(NETCDF_LIBS)
+    AC_DEFINE(HAVE_LIBNETCDF, 1, [Enable netcdf code])
+    AC_MSG_RESULT([netcdf code included]),
+    AC_MSG_ERROR([netcdf library not found]),
+    [-lnetcdff -lnetcdf])
 else
   AC_MSG_RESULT([netcdf code not included])
 fi
