qcspa and drafth qctem
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@1246 500a5620-302c-0410-bb8c-d54761bbe776

--- a/qc/Makefile.am
+++ b/qc/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES = libsim_qc.la
-libsim_qc_la_SOURCES = modqc.F90 modqcspa.F90
+libsim_qc_la_SOURCES = modqc.F90 modqctem.F90
 
 AM_FCFLAGS = -I../base -I../vol7d -I../log4fortran
 libsim_qc_la_LIBADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
@@ -11,6 +11,12 @@ endif
 if SHAPELIB
 libsim_qc_la_LIBADD += $(SHAPELIB_LIBS)
 libsim_qc_la_SOURCES += modqccli.F90
+endif
+
+if NCARG
+#libsim_qc_la_LIBADD += $(NCARG_LIBS)
+libsim_qc_la_SOURCES += modqcspa.F90
+#libsim_qc_la_LDFLAGS = $(NCARG_LDFLAGS)
 endif
 
 noinst_HEADERS = modqc_peeled_include.F90  modqc_peeling_include.F90  modqc_peel_util_include.F90
